added JWT Auth, Login and SignUp

--- a/server/example.env
+++ b/server/example.env
@@ -1,2 +1,4 @@
-MONGO_STRING=// Mongo DB Atlas Connection String
-RESEND_API_KEY=// Resend API Key
+MONGO_URI=mongodb+srv://WaseeChoudhary:8mgNw7Vd7xhGvwFw@cluster0.lxqrq7c.mongodb.net/DarziXpress
+PORT=5000
+JWT_SECRET=darzixpressSexretKey
+JWT_EXPIRY=1d
