--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "darxixpress": "file:",
     "lucide-react": "^0.383.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "shadcn-vite-js-template": "file:",
     "tailwind-merge": "^2.3.0",
