--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.13",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
