--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "shadcn-vite-js-template": "file:",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
