--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,13 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.0",
     "resend": "^4.5.0",
     "server": "file:"
