--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,15 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "darxixpress": "file:",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.383.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
