--- a/server/example.env
+++ b/server/example.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://WaseeChoudhary:8mgNw7Vd7xhGvwFw@cluster0.lxqrq7c.mongodb
 PORT=5000
 JWT_SECRET=darzixpressSexretKey
 JWT_EXPIRY=1d
+RESEND_API_KEY= re_TG8XeAop_B4R1Ap6DC6PThMZAmREWgHnf
